# ptmake

./: .gitignore  BUILDING  Jamfile  Makefile  README  README.md  TODO  aprpp.cc  aprpp.h  argpc.cc  argpc.h  argpcoption.cc  argpcoption.h  bison.mak  build.cc  build.h  config.h  debug.cc  debug.h  dependencies.cc  dependencies.h  exception.cc  exception.h  file.h  file_unix.cc  find.cc  find.h  gcc.mak  globals.h  graphviz.cc  graphviz.h  hash.cc  hash.h  jam.cc  jam.y  jam_parse.y  lex.cc  main.cc  make.cc  make.y  (+33 more)
.github/workflows/: build.yml
test/: Makefile  deps.cc  main.c  main.cc  make_rules.cc  tests.h
